--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://dokurno.dev/gif-picker-react",
   "scripts": {
+    "prepare": "tsup",
     "start": "tsup --watch",
     "build": "tsup",
     "storybook": "storybook dev -p 6006",
@@ -27,6 +28,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     }
